# Monkey-Type

./: CMakeLists.txt
assets/: longWords.txt  mediumWords.txt  score.txt  settings.txt  shortWords.txt
src/: Text.cpp  Text.h  main.cpp
